--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,17 @@
+# Core dependencies
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+pydantic==2.5.0
 
+# LLM integration
+anthropic==0.68.0
+
+# Development and testing
+pytest==7.4.3
+pytest-asyncio==0.21.1
+httpx==0.25.2
+flake8==6.1.0
+
+# Optional: Additional testing tools
+pytest-cov==4.1.0
+black==23.11.0
